[package]
name = "simple_democracy"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2018"
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0'
version = '2.0.0'

[dependencies.pallet-membership]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0'
version = '2.0.0'

[dependencies.pallet-collective]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0'
version = '2.0.0'

[dependencies.pallet-democracy]
package = 'forked-pallet-democracy'
default-features = false
path = '../democracy'
version = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-democracy/std',
]